--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </table>
     </section>
 
-    <script src="dist/bundle.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
 </body>
 </html>
